Fix contrast for A11Y

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -82,7 +82,7 @@
 }
 
 .gatsby-highlight-code-line {
-  background-color: #474747;
+  background-color: #000;
   display: block;
   margin-right: -1.575rem;
   margin-left: -1.575rem;
